@@ -1,5 +1,3 @@
-- generate correct (Python 3.4) bytecode for the Sailfish OS package
- - makes modRana Python part startup almost 2 times faster (~3.8s->~2s) ! :)
-- make location and map page in Qt 5 GUI asynchronous
- - this should make the startup even faster and more seemless
-- add a fade in & out animation for the startup indicator in Qt 5 GUI
+- fix the compass rose not showing up in the Qt 5 GUI on Sailfish OS
+- fix a typo preventing location startup if no last known position exists in Qt 5 GUI
+- fix a race condition that could prevent some map tiles from working properly in Qt 5 GUI
