@@ -1,3 +1,10 @@
+modrana (0.49.7) stable; urgency=low
+
+  * Thu Oct 23 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.7
+  *  - fix the compass rose not showing up in the Qt 5 GUI on Sailfish OS
+
+ -- Martin Kolman <martin.kolman@gmail.com>  Fri, 24 Oct 2014 01:50:04 +0000
+
 modrana (0.49.6) stable; urgency=low
 
   * Tue Oct 21 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.6
