@@ -1,3 +1,5 @@
+* Thu Oct 23 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.7
+- fix the compass rose not showing up in the Qt 5 GUI on Sailfish OS
 * Tue Oct 21 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.6
 - generate correct (Python 3.4) bytecode for the Sailfish OS package
  - makes modRana Python part startup almost 2 times faster (~3.8s->~2s) ! :)
